# Kajiado-AquaShield

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FILES_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  UI_REDESIGN_SUMMARY.md  package.json  pnpm-lock.yaml  railway.json  railway.toml  vercel.json
app/: layout.tsx
backend/: initialize_db.py  pyproject.toml  railway.json  railway.toml  requirements.txt
backend/app/: alerts.py  dashboard.py  database.py  main.py  risk.py  risk_engine.py  schemas.py  weather.py  weather_service.py
components/: affected-areas-list.tsx  alert-console.tsx  alert-simulator.tsx  dashboard.tsx  footer-section.tsx  location-selector.tsx  risk-assessment-map.tsx  risk-indicator.tsx  risk-score-display.tsx  telemetry-card.tsx  warning-banner.tsx
