[project]
name = "aquashield-backend"
version = "1.0.0"
description = "AquaShield Flash-flood risk assessment API for Kajiado County"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.0",
    "httpx==0.27.0",
    "python-multipart==0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"